@@ -382,6 +382,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10763) Fix multi-insert logic for PostgreSQL
 * Fix invalid XHTML when viewing a deleted revision
 * Fix syntax error in translations of magic words in Romanian language
+* (bug 8737) Fix warnings caused by incorrect use of `/dev/null` when piping
+  process error output under Windows
 
 == API changes since 1.10 ==
 
